--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog-dual-color-svg-icons",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://marekrozmus.github.io/blog-dual-color-svg-icons/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.19"
+    "@types/styled-components": "^5.1.19",
+    "gh-pages": "^3.2.3"
   }
 }
